--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@
       transition: var(--transition);
       position: relative;
       font-weight: 500;
+      text-align: left;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
     }
 
     .anim-btn:hover {
@@ -821,13 +825,31 @@
     function listAnimations(viewerId) {
       const viewer = document.getElementById(viewerId);
       const animations = viewer.getAnimations();
+      const animDetails = viewer.getAnimationsWithDetails ? viewer.getAnimationsWithDetails() : [];
       const listElement = document.getElementById('animation-list');
       const current = viewer.getCurrentAnimation ? viewer.getCurrentAnimation() : null;
+
+      // Debug: log animation details
+      console.log('[Animation Details]', animDetails);
+
       if (animations.length > 0) {
-        const buttons = animations.map(anim => {
+        const buttons = animations.map((anim, index) => {
           const safe = anim.replace(/"/g, '&quot;');
           const activeCls = current === anim ? 'active' : '';
-          return `<li><button class="anim-btn ${activeCls}" draggable="true" ondragstart="handleAnimDragStart(event, '${safe}')" onclick="changeAnimation('${viewerId}', '${safe}')">${anim}</button></li>`;
+
+          // Get details for this animation
+          const details = animDetails.find(d => d.name === anim);
+          let layerInfo = '';
+          if (details) {
+            const parts = [];
+            if (details.slotCount > 0) parts.push(`${details.slotCount} slot${details.slotCount > 1 ? 's' : ''}`);
+            if (details.boneCount > 0) parts.push(`${details.boneCount} bone${details.boneCount > 1 ? 's' : ''}`);
+            if (parts.length > 0) {
+              layerInfo = `<div style="font-size: 10px; opacity: 0.7; margin-top: 2px;">${parts.join(', ')}</div>`;
+            }
+          }
+
+          return `<li><button class="anim-btn ${activeCls}" draggable="true" ondragstart="handleAnimDragStart(event, '${safe}')" onclick="changeAnimation('${viewerId}', '${safe}')" title="${safe}">${anim}${layerInfo}</button></li>`;
         }).join('');
         listElement.innerHTML = `<h4>可用動畫</h4><div class="anim-scroll"><ul class="anim-list">${buttons}</ul></div>`;
       } else {
